--- a/simple_gcode_editor/pom.xml
+++ b/simple_gcode_editor/pom.xml
@@ -1,23 +1,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-  
-    <groupId>com.menkaix</groupId>
-    <artifactId>simple_gcode_editor</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
-
-    <name>com.menkaix:simple_gcode_editor</name>
-    <description>A DevDungeon.com project</description>
-      
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
-      
-    <dependencies>
-<!--
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.menkaix</groupId>
+	<artifactId>simple_gcode_editor</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+	<name>com.menkaix:simple_gcode_editor</name>
+	<description>A DevDungeon.com project</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+		<!--
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -25,7 +27,7 @@
             <scope>test</scope>
         </dependency>
 -->
-<!--
+		<!--
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -52,18 +54,17 @@
             <version>13</version>
         </dependency>
 -->
-    </dependencies>
-  
-    <build>
-        <plugins>
-<!--         
+	</dependencies>
+	<build>
+		<plugins>
+			<!--         
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
             </plugin>
 -->
-<!--
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -77,7 +78,7 @@
                 </configuration>
             </plugin>
 -->
-<!--
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -92,7 +93,7 @@
                 </executions>
             </plugin>
 -->
-<!--
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -107,7 +108,7 @@
                 </executions>
             </plugin>
 -->
-<!--
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -122,7 +123,7 @@
                 </executions>
             </plugin>
 -->
-<!--
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-gpg-plugin</artifactId>
@@ -141,7 +142,7 @@
                 </executions>
             </plugin>
 -->
-        <!-- Sample ~/.m2/settings.xml file with GPG key specified:
+			<!-- Sample ~/.m2/settings.xml file with GPG key specified:
             <settings>
                 <servers>
                     <server>
@@ -160,9 +161,8 @@
                     </profile>
                 </profiles>
         </settings> -->
-        
-<!-- JavaFX Maven plugin enables `mvn javafx:run` and `mvn javafx:jlink` -->
-<!--
+			<!-- JavaFX Maven plugin enables `mvn javafx:run` and `mvn javafx:jlink` -->
+			<!--
         <plugin>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-maven-plugin</artifactId>
@@ -172,8 +172,6 @@
             </configuration>
         </plugin>
 -->
-        </plugins>
-    </build>
-  
+		</plugins>
+	</build>
 </project>
-
